--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="banner-item">
                             <h1>Shop With Now</h1>
                             <p class="text-white text-sm ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione impedit nihil dignissimos neque quia deserunt ex illo dolorum ullam animi.</p>
-                            <a href="#"><button class="btn btn-shop">Shop Now</button></a>
+                            <a href="#"><button class="btn btn-shop mt-3 mb-3">Shop Now</button></a>
                            <a href="#exampleModal" data-bs-toggle="modal"><button class="btn btn-get">Get Started</button></a> 
                         </div>
                     </div>
